Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-25931

Service 'memcached' exited with status 139 - centos longevity - rebalance failures

    XMLWordPrintable

Details

    • Triaged
    • Unknown

    Description

      centos longevity against RC4 - 5.0.0-3509 - rebalance failures due to memcached exit:

      2017-09-05T11:11:22.097-07:00, ns_memcached:0:info:message(ns_1@172.23.97.238) - Control connection to memcached on 'ns_1@172.23.97.238' disconnected: {badmatch,
                                                                             {error,
                                                                              closed}}
      2017-09-05T11:11:22.116-07:00, compaction_new_daemon:0:warning:message(ns_1@172.23.97.238) - Compactor for vbucket `default/990` (pid [{type,vbucket},
                                                {name,<<"default/990">>},
                                                {important,false},
                                                {fa,
                                                 {#Fun<compaction_new_daemon.13.86110551>,
                                                  [<<"default">>,
                                                   {990,<<"default/990">>},
                                                   {config,
                                                    {30,undefined},
                                                    {30,undefined},
                                                    undefined,false,false,
                                                    {daemon_config,30,131072,
                                                     20971520}},
                                                   false,
                                                   {1504375836,13813,false}]}}]) terminated unexpectedly (ignoring this): {badmatch,
                                                                                                                           {error,
                                                                                                                            closed}}
      2017-09-05T11:11:22.184-07:00, ns_vbucket_mover:0:critical:message(ns_1@172.23.108.103) - <0.13725.68> exited with {unexpected_exit,
                                {'EXIT',<0.13802.68>,
                                 {{{noproc,
                                    {gen_server,call,
                                     ['dcp_replicator-WAREHOUSE-ns_1@172.23.97.238',
                                      {setup_replication,
                                       [291,292,293,294,295,296,297,298,299,300,301,
                                        302,303,304,305,306,307,752,753,754,755,756,
                                        757,758,759,760,761,762,763,764,765,766,767,
                                        768,769,770,771,772,773,774,775,776,777,778,
                                        779,780,781,782,783,784,785]},
                                      infinity]}},
                                   {gen_server,call,
                                    ['replication_manager-WAREHOUSE',
                                     {dcp_takeover,'ns_1@172.23.97.239',489},
                                     infinity]}},
                                  {gen_server,call,
                                   [{'janitor_agent-WAREHOUSE',
                                     'ns_1@172.23.108.104'},
                                    {if_rebalance,<0.11005.67>,
                                     {dcp_takeover,'ns_1@172.23.97.239',489}},
                                    infinity]}}}}
      2017-09-05T11:11:22.196-07:00, ns_orchestrator:0:critical:message(ns_1@172.23.108.103) - Rebalance exited with reason {unexpected_exit,
                                    {'EXIT',<0.13802.68>,
                                     {{{noproc,
                                        {gen_server,call,
                                         ['dcp_replicator-WAREHOUSE-ns_1@172.23.97.238',
                                          {setup_replication,
                                           [291,292,293,294,295,296,297,298,299,300,
                                            301,302,303,304,305,306,307,752,753,754,
                                            755,756,757,758,759,760,761,762,763,764,
                                            765,766,767,768,769,770,771,772,773,774,
                                            775,776,777,778,779,780,781,782,783,784,
                                            785]},
                                          infinity]}},
                                       {gen_server,call,
                                        ['replication_manager-WAREHOUSE',
                                         {dcp_takeover,'ns_1@172.23.97.239',489},
                                         infinity]}},
                                      {gen_server,call,
                                       [{'janitor_agent-WAREHOUSE',
                                         'ns_1@172.23.108.104'},
                                        {if_rebalance,<0.11005.67>,
                                         {dcp_takeover,'ns_1@172.23.97.239',489}},
                                        infinity]}}}}
      2017-09-05T11:11:22.355-07:00, ns_log:0:info:message(ns_1@172.23.97.238) - Service 'memcached' exited with status 139. Restarting. Messages:
      2017-09-05T11:11:21.876200-07:00 FATAL     /opt/couchbase/bin/../lib/libxattr.so.0.1.0(_ZN2cb5xattr15get_body_offsetERKNS_17const_char_bufferE+0x3) [0x7fad8e64f000+0x36b3]
      2017-09-05T11:11:21.876212-07:00 FATAL     /opt/couchbase/bin/memcached() [0x400000+0x4771c]
      2017-09-05T11:11:21.876224-07:00 FATAL     /opt/couchbase/bin/../lib/../lib/ep.so() [0x7fad8804f000+0xb6020]
      2017-09-05T11:11:21.876233-07:00 FATAL     /opt/couchbase/bin/../lib/../lib/ep.so() [0x7fad8804f000+0xb28a0]
      2017-09-05T11:11:21.876243-07:00 FATAL     /opt/couchbase/bin/../lib/../lib/ep.so() [0x7fad8804f000+0xb1988]
      2017-09-05T11:11:21.876251-07:00 FATAL     /opt/couchbase/bin/../lib/../lib/ep.so() [0x7fad8804f000+0xb9c62]
      2017-09-05T11:11:21.876261-07:00 FATAL     /opt/couchbase/bin/../lib/../lib/ep.so() [0x7fad8804f000+0x9e6eb]
      2017-09-05T11:11:21.876271-07:00 FATAL     /opt/couchbase/bin/../lib/libplatform_so.so.0.1.0() [0x7fad8e232000+0x70ae]
      2017-09-05T11:11:21.876282-07:00 FATAL     /lib64/libpthread.so.0() [0x7fad8dbf2000+0x7dc5]
      2017-09-05T11:11:21.876318-07:00 FATAL     /lib64/libc.so.6(clone+0x6d) [0x7fad8bcae000+0xf776d]
      2017-09-05T11:11:25.800-07:00, ns_memcached:0:info:message(ns_1@172.23.97.238) - Bucket "STOCK" loaded on node 'ns_1@172.23.97.238' in 2 seconds.
      

      Attachments

        1. Screen Shot 2017-09-05 at 11.15.33 AM.png
          97 kB
          Arunkumar Senthilnathan
        2. Screen Shot 2017-09-05 at 11.15.23 AM.png
          98 kB
          Arunkumar Senthilnathan
        3. Screen Shot 2017-09-05 at 11.16.34 AM.png
          99 kB
          Arunkumar Senthilnathan
        4. Screen Shot 2017-09-05 at 11.15.00 AM.png
          154 kB
          Arunkumar Senthilnathan
        For Gerrit Dashboard: MB-25931
        # Subject Branch Project Status CR V

        Activity

          People

            arunkumar Arunkumar Senthilnathan (Inactive)
            arunkumar Arunkumar Senthilnathan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty