MB-25931: Fetch value when expiring meta only items

If the expiry code encounters an xattr item with no value we must
fetch the value before running the pre_expiry hook. This fetch is done
inline in the deleteExpiredItem function which is running on an AUXIO
background task.

Change-Id: I0207b25e07128b5a6ce7ef57f57f209c6dd6582a
Reviewed-on: http://review.couchbase.org/83137
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>